updated partials for css

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,24 @@
+footer {
+  background-color: #C68175;
+  font-family: "Bree Serif", serif;
+  padding: 1rem; }
+  footer h6 {
+    margin: 0; }
+  footer .fab {
+    padding-left: 2rem;
+    padding-right: 2rem; }
+  footer nav {
+    list-style: none; }
+    footer nav a {
+      color: #F2F2F2;
+      text-decoration: none;
+      padding-left: 1.5rem;
+      padding-right: 1rem; }
+      footer nav a:hover {
+        color: #9ecba8;
+        -webkit-transition: all 2s ease 0s;
+        transition: all 2s ease 0s; }
+
 html {
   font-family: "Roboto Slab", serif;
   background-color: #f7f7f7; }
@@ -15,8 +36,8 @@ header {
     header nav a {
       color: #F2F2F2;
       text-decoration: none;
-      padding-left: 2rem;
-      padding-right: 2rem; }
+      padding-left: 1.5rem;
+      padding-right: 1rem; }
       header nav a:hover {
         color: #9ecba8;
         -webkit-transition: all 2s ease 0s;
@@ -49,19 +70,24 @@ article p {
 article .youtube {
   padding: 1rem; }
 article .research {
-  width: 60%; }
+  width: 60%;
+  margin: auto;
+  padding-left: 5vh; }
 article .map {
-  width: 90%; }
+  width: 80%;
+  padding-left: 5vh; }
 article .person {
   width: 60%;
   padding-left: 10%; }
 article form {
   text-align: center; }
+article textarea {
+  max-width: 70%; }
 article fieldset {
   width: 40%;
   margin: auto; }
 article .center {
-  padding-left: 10%; }
+  padding-left: 5%; }
 
 aside {
   background-color: #FFF3E5;
@@ -75,28 +101,8 @@ aside {
     border-width: 0.1vh;
     text-align: center;
     border-radius: 1rem;
-    background-color: #F0F0EF; }
-
-footer {
-  background-color: #C68175;
-  font-family: "Bree Serif", serif;
-  padding: 1rem; }
-  footer h6 {
-    margin: 0; }
-  footer .fab {
-    padding-left: 2rem;
-    padding-right: 2rem; }
-  footer nav {
-    list-style: none; }
-    footer nav a {
-      color: #F2F2F2;
-      text-decoration: none;
-      padding-left: 2rem;
-      padding-right: 2rem; }
-      footer nav a:hover {
-        color: #9ecba8;
-        -webkit-transition: all 2s ease 0s;
-        transition: all 2s ease 0s; }
+    background-color: #F0F0EF;
+    margin-right: 0; }
 
 @media only screen and (min-width: 320px) and (max-width: 768px) {
   html {
