--- a/styles/contact.css
+++ b/styles/contact.css
@@ -1,3 +1,54 @@
+header {
+  background-color: #C68175;
+  font-family: "Josefin Sans", sans-serif;
+  padding: 1rem; }
+  header .fab {
+    padding-left: 2rem;
+    padding-right: 2rem; }
+  header nav {
+    text-align: left;
+    list-style: none; }
+    header nav a {
+      color: #F2F2F2;
+      text-decoration: none;
+      padding-left: 1.5rem;
+      padding-right: 1rem; }
+      header nav a:hover {
+        color: #9ecba8;
+        -webkit-transition: all 2s ease 0s;
+        transition: all 2s ease 0s; }
+
+section {
+  background-color: #FFF3E5;
+  font-family: "Bree Serif", serif; }
+  section img {
+    width: 80%;
+    height: auto;
+    padding-left: 2rem; }
+  section h1 {
+    text-align: right;
+    padding-right: 2rem; }
+  section h3 {
+    margin: 0;
+    text-align: right;
+    padding-right: 3rem;
+    font-size: 3vh; }
+
+aside {
+  background-color: #FFF3E5;
+  font-family: "Josefin Sans", sans-serif; }
+  aside form {
+    font-size: 3vh;
+    margin: 2rem; }
+  aside div[class^="col span_1_of_6"] {
+    border-style: solid;
+    border-color: #F0F0EF;
+    border-width: 0.1vh;
+    text-align: center;
+    border-radius: 1rem;
+    background-color: #F0F0EF;
+    margin-right: 0; }
+
 footer {
   background-color: #C68175;
   font-family: "Bree Serif", serif;
@@ -19,94 +70,6 @@ footer {
         -webkit-transition: all 2s ease 0s;
         transition: all 2s ease 0s; }
 
-html {
-  font-family: "Roboto Slab", serif;
-  background-color: #f7f7f7; }
-
-header {
-  background-color: #C68175;
-  font-family: "Bree Serif", serif;
-  padding: 1rem; }
-  header .fab {
-    padding-left: 2rem;
-    padding-right: 2rem; }
-  header nav {
-    text-align: left;
-    list-style: none; }
-    header nav a {
-      color: #F2F2F2;
-      text-decoration: none;
-      padding-left: 1.5rem;
-      padding-right: 1rem; }
-      header nav a:hover {
-        color: #9ecba8;
-        -webkit-transition: all 2s ease 0s;
-        transition: all 2s ease 0s; }
-
-section {
-  background-color: #FFF3E5;
-  font-family: "Josefin Sans", sans-serif; }
-  section img {
-    width: 80%;
-    height: auto;
-    padding-left: 2rem; }
-  section h1 {
-    text-align: right;
-    padding-right: 2rem; }
-  section h3 {
-    margin: 0;
-    text-align: right;
-    padding-right: 3rem;
-    font-size: 3vh; }
-
-article h2 {
-  text-align: center;
-  font-size: 3vh; }
-article h3, article h4 {
-  padding-left: 1rem; }
-article p {
-  margin-left: 2rem;
-  margin-right: 2rem; }
-article .youtube {
-  padding: 1rem; }
-article .research {
-  width: 60%;
-  margin: auto;
-  padding-left: 5vh; }
-article .map {
-  width: 80%;
-  padding-left: 5vh; }
-article .person {
-  width: 60%;
-  padding-left: 10%; }
-article form {
-  text-align: center; }
-article textarea {
-  max-width: 70%; }
-article fieldset {
-  width: 40%;
-  margin: auto; }
-article .center {
-  padding-left: 5%; }
-
-aside {
-  background-color: #FFF3E5;
-  font-family: "Josefin Sans", sans-serif; }
-  aside form {
-    font-size: 3vh;
-    margin: 2rem; }
-  aside div[class^="col span_1_of_6"] {
-    border-style: solid;
-    border-color: #F0F0EF;
-    border-width: 0.1vh;
-    text-align: center;
-    border-radius: 1rem;
-    background-color: #F0F0EF;
-    margin-right: 0; }
-
-@media only screen and (min-width: 320px) and (max-width: 768px) {
-  html {
-    width: 100%; } }
 /*  SECTIONS  */
 .section {
   clear: both;
@@ -162,5 +125,38 @@ aside {
 @media only screen and (max-width: 480px) {
   .span_1_of_6 {
     width: 100%; } }
+html {
+  font-family: "Roboto Slab", serif;
+  background-color: #f7f7f7; }
 
-/*# sourceMappingURL=styles.css.map */
+article h2 {
+  text-align: center;
+  font-size: 3vh; }
+article h4 {
+  padding-left: 1rem; }
+article p {
+  margin-left: 2rem;
+  margin-right: 2rem; }
+
+@media only screen and (min-width: 320px) and (max-width: 768px) {
+  html {
+    width: 100%; } }
+article h3 {
+  padding-left: 1rem; }
+article .map {
+  width: 80%;
+  padding-left: 5vh; }
+article .person {
+  width: 60%;
+  padding-left: 10%; }
+article form {
+  text-align: center; }
+article textarea {
+  max-width: 70%; }
+article fieldset {
+  width: 40%;
+  margin: auto; }
+article .center {
+  padding-left: 5%; }
+
+/*# sourceMappingURL=contact.css.map */
