--- a/styles/old-styles/styles.css
+++ b/styles/old-styles/styles.css
@@ -1,166 +1,52 @@
-header {
-  background-color: #C68175;
-  font-family: "Bree Serif", serif;
-  padding: 1rem; }
-  header .fab {
-    padding-left: 2rem;
-    padding-right: 2rem; }
-  header nav {
-    text-align: left;
-    list-style: none; }
-    header nav a {
-      color: #F2F2F2;
-      text-decoration: none;
-      padding-left: 1.5rem;
-      padding-right: 1rem; }
-      header nav a:hover {
-        color: #9ecba8;
-        -webkit-transition: all 2s ease 0s;
-        transition: all 2s ease 0s; }
+/*
+Error: File to import not found or unreadable: globals/colors.
+       Load path: /Users/winniewong/Desktop/html300_code/fesc_site_redesign/styles/old-styles
+        on line 1 of /Users/winniewong/Desktop/html300_code/fesc_site_redesign/styles/old-styles/styles.scss
 
-section {
-  background-color: #FFF3E5;
-  font-family: "Josefin Sans", sans-serif; }
-  section img {
-    width: 80%;
-    height: auto;
-    padding-left: 2rem; }
-  section h1 {
-    text-align: right;
-    padding-right: 2rem; }
-  section h3 {
-    margin: 0;
-    text-align: right;
-    padding-right: 3rem;
-    font-size: 3vh; }
+1: @import 'globals/colors';
+2: @import 'globals/typography';
+3: @import 'components/footer';
+4: 
+5:   
+6: html {
 
-aside {
-  background-color: #FFF3E5;
-  font-family: "Josefin Sans", sans-serif; }
-  aside form {
-    font-size: 3vh;
-    margin: 2rem; }
-  aside div[class^="col span_1_of_6"] {
-    border-style: solid;
-    border-color: #F0F0EF;
-    border-width: 0.1vh;
-    text-align: center;
-    border-radius: 1rem;
-    background-color: #F0F0EF;
-    margin-right: 0; }
-
-footer {
-  background-color: #C68175;
-  font-family: "Bree Serif", serif;
-  padding: 1rem; }
-  footer h6 {
-    margin: 0; }
-  footer .fab {
-    padding-left: 2rem;
-    padding-right: 2rem; }
-  footer nav {
-    list-style: none; }
-    footer nav a {
-      color: #F2F2F2;
-      text-decoration: none;
-      padding-left: 1.5rem;
-      padding-right: 1rem; }
-      footer nav a:hover {
-        color: #9ecba8;
-        -webkit-transition: all 2s ease 0s;
-        transition: all 2s ease 0s; }
-
-/*  SECTIONS  */
-.section {
-  clear: both;
-  padding: 0px;
-  margin: 0px; }
-
-/*  COLUMN SETUP  */
-.col {
-  display: block;
-  float: left;
-  margin: 1% 0 1% 1.6%; }
-
-.col:first-child {
-  margin-left: 0; }
-
-/*  GROUPING  */
-.group:before,
-.group:after {
-  content: "";
-  display: table; }
-
-.group:after {
-  clear: both; }
-
-.group {
-  zoom: 1;
-  /* For IE 6/7 */ }
-
-/*  GRID OF THREE  */
-.span_1_of_3 {
-  width: 32.2%; }
-
-/*  GO FULL WIDTH AT LESS THAN 480 PIXELS */
-@media only screen and (max-width: 480px) {
-  .col {
-    margin: 1% 0 1% 0%; }
-
-  .span_1_of_3 {
-    width: 100%; } }
-/*  GRID OF TWO */
-.span_1_of_2 {
-  width: 49.2%; }
-
-/*  GO FULL WIDTH AT LESS THAN 480 PIXELS */
-@media only screen and (max-width: 480px) {
-  .span_1_of_2 {
-    width: 100%; } }
-/*  GRID OF SIX  */
-.span_1_of_6 {
-  width: 14%; }
-
-/*  GO FULL WIDTH AT LESS THAN 480 PIXELS */
-@media only screen and (max-width: 480px) {
-  .span_1_of_6 {
-    width: 100%; } }
-html {
-  font-family: "Roboto Slab", serif;
-  background-color: #f7f7f7; }
-
-article h2 {
-  text-align: center;
-  font-size: 3vh; }
-article h3, article h4 {
-  padding-left: 1rem; }
-article p {
-  margin-left: 2rem;
-  margin-right: 2rem; }
-article .youtube {
-  padding: 1rem; }
-article .research {
-  width: 60%;
-  margin: auto;
-  padding-left: 5vh; }
-article .map {
-  width: 80%;
-  padding-left: 5vh; }
-article .person {
-  width: 60%;
-  padding-left: 10%; }
-article form {
-  text-align: center; }
-article textarea {
-  max-width: 70%; }
-article fieldset {
-  width: 40%;
-  margin: auto; }
-article .center {
-  padding-left: 5%; }
-
-@media only screen and (min-width: 320px) and (max-width: 768px) {
-  html {
-    width: 100%; } }
-
-/*# sourceMappingURL=styles.css.map */
+Backtrace:
+/Users/winniewong/Desktop/html300_code/fesc_site_redesign/styles/old-styles/styles.scss:1
+/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.5.2/lib/sass/tree/import_node.rb:67:in `rescue in import'
+/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.5.2/lib/sass/tree/import_node.rb:45:in `import'
+/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.5.2/lib/sass/tree/import_node.rb:28:in `imported_file'
+/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.5.2/lib/sass/tree/import_node.rb:37:in `css_import?'
+/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/perform.rb:314:in `visit_import'
+/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/base.rb:36:in `visit'
+/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/perform.rb:162:in `block in visit'
+/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.5.2/lib/sass/stack.rb:79:in `block in with_base'
+/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.5.2/lib/sass/stack.rb:135:in `with_frame'
+/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.5.2/lib/sass/stack.rb:79:in `with_base'
+/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/perform.rb:162:in `visit'
+/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/base.rb:52:in `block in visit_children'
+/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/base.rb:52:in `map'
+/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/base.rb:52:in `visit_children'
+/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/perform.rb:171:in `block in visit_children'
+/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/perform.rb:183:in `with_environment'
+/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/perform.rb:170:in `visit_children'
+/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/base.rb:36:in `block in visit'
+/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/perform.rb:190:in `visit_root'
+/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/base.rb:36:in `visit'
+/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/perform.rb:161:in `visit'
+/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/perform.rb:10:in `visit'
+/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.5.2/lib/sass/tree/root_node.rb:36:in `css_tree'
+/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.5.2/lib/sass/tree/root_node.rb:29:in `render_with_sourcemap'
+/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.5.2/lib/sass/engine.rb:389:in `_render_with_sourcemap'
+/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.5.2/lib/sass/engine.rb:307:in `render_with_sourcemap'
+/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.5.2/lib/sass/exec/sass_scss.rb:391:in `run'
+/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.5.2/lib/sass/exec/sass_scss.rb:63:in `process_result'
+/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.5.2/lib/sass/exec/base.rb:52:in `parse'
+/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.5.2/lib/sass/exec/base.rb:19:in `parse!'
+/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.5.2/bin/sass:13:in `<top (required)>'
+/Applications/Koala.app/Contents/Resources/app.nw/bin/sass:22:in `load'
+/Applications/Koala.app/Contents/Resources/app.nw/bin/sass:22:in `<main>'
+*/
+body:before {
+  white-space: pre;
+  font-family: monospace;
+  content: "Error: File to import not found or unreadable: globals/colors.\A        Load path: /Users/winniewong/Desktop/html300_code/fesc_site_redesign/styles/old-styles\A         on line 1 of /Users/winniewong/Desktop/html300_code/fesc_site_redesign/styles/old-styles/styles.scss\A \A 1: @import 'globals/colors';\A 2: @import 'globals/typography';\A 3: @import 'components/footer';\A 4: \A 5:   \A 6: html {"; }
