--- a/styles/components/_styles.scss
+++ b/styles/components/_styles.scss
@@ -9,6 +9,10 @@ article{
   text-align: center;
     font-size: 3vh;
 }
+  
+  h3{
+    padding-left: 1rem;
+  }
   h4{
     padding-left: 1rem;
   }
