--- a/styles/components/_header.scss
+++ b/styles/components/_header.scss
@@ -1,11 +1,17 @@
 header{
   background-color: $nav;
   font-family: $font2;
-  padding: 1rem;
+  //padding: 1rem;
   
   .fab{
-    padding-left: 2rem;
-    padding-right: 2rem;
+    padding-left: 2vh;
+    padding-right: 2vh;
+    text-align: center;
+    
+  }
+  
+  form{
+    text-align: center;
   }
   
   nav {
@@ -14,13 +20,17 @@ header{
   
   a{
     color: $fontcolor1;
+    text-align: center;
     text-decoration: none;
-    padding-left: 1.5rem;
-    padding-right: 1rem;
+    display: inline-block;
+    padding: 3vh;
+    
   
   &:hover {
-  color:#9ecba8;
-  transition: all 2s ease 0s;
+    background-color: $highlight;
+    color:$hover;
+    transition: all 2s ease 0s;
+    text-decoration:none;
       }
     }
   }
