--- a/styles/contact.css
+++ b/styles/contact.css
@@ -1,22 +1,27 @@
 header {
   background-color: #C68175;
-  font-family: "Josefin Sans", sans-serif;
-  padding: 1rem; }
+  font-family: "Josefin Sans", sans-serif; }
   header .fab {
-    padding-left: 2rem;
-    padding-right: 2rem; }
+    padding-left: 2vh;
+    padding-right: 2vh;
+    text-align: center; }
+  header form {
+    text-align: center; }
   header nav {
     text-align: left;
     list-style: none; }
     header nav a {
       color: #F2F2F2;
+      text-align: center;
       text-decoration: none;
-      padding-left: 1.5rem;
-      padding-right: 1rem; }
+      display: inline-block;
+      padding: 3vh; }
       header nav a:hover {
-        color: #9ecba8;
+        background-color: #ffe9ec;
+        color: #000000;
         -webkit-transition: all 2s ease 0s;
-        transition: all 2s ease 0s; }
+        transition: all 2s ease 0s;
+        text-decoration: none; }
 
 section {
   background-color: #FFF3E5;
@@ -51,24 +56,31 @@ aside {
 
 footer {
   background-color: #C68175;
-  font-family: "Bree Serif", serif;
-  padding: 1rem; }
+  font-family: "Josefin Sans", sans-serif; }
   footer h6 {
-    margin: 0; }
+    margin: 0;
+    padding-left: 1vh; }
   footer .fab {
-    padding-left: 2rem;
-    padding-right: 2rem; }
+    padding-left: 2vh;
+    padding-right: 2vh;
+    text-align: center; }
+  footer form {
+    text-align: center; }
   footer nav {
+    text-align: left;
     list-style: none; }
     footer nav a {
       color: #F2F2F2;
+      text-align: center;
       text-decoration: none;
-      padding-left: 1.5rem;
-      padding-right: 1rem; }
+      display: inline-block;
+      padding: 3vh; }
       footer nav a:hover {
-        color: #9ecba8;
+        background-color: #ffe9ec;
+        color: #000000;
         -webkit-transition: all 2s ease 0s;
-        transition: all 2s ease 0s; }
+        transition: all 2s ease 0s;
+        text-decoration: none; }
 
 /*  SECTIONS  */
 .section {
@@ -132,6 +144,8 @@ html {
 article h2 {
   text-align: center;
   font-size: 3vh; }
+article h3 {
+  padding-left: 1rem; }
 article h4 {
   padding-left: 1rem; }
 article p {
@@ -141,8 +155,6 @@ article p {
 @media only screen and (min-width: 320px) and (max-width: 768px) {
   html {
     width: 100%; } }
-article h3 {
-  padding-left: 1rem; }
 article .map {
   width: 80%;
   padding-left: 5vh; }
@@ -158,4 +170,5 @@ article fieldset {
   margin: auto; }
 article .center {
   padding-left: 5%; }
+
 /*# sourceMappingURL=contact.css.map */
