--- a/styles/research.css
+++ b/styles/research.css
@@ -1,22 +1,27 @@
 header {
   background-color: #C68175;
-  font-family: "Josefin Sans", sans-serif;
-  padding: 1rem; }
+  font-family: "Josefin Sans", sans-serif; }
   header .fab {
-    padding-left: 2rem;
-    padding-right: 2rem; }
+    padding-left: 2vh;
+    padding-right: 2vh;
+    text-align: center; }
+  header form {
+    text-align: center; }
   header nav {
     text-align: left;
     list-style: none; }
     header nav a {
       color: #F2F2F2;
+      text-align: center;
       text-decoration: none;
-      padding-left: 1.5rem;
-      padding-right: 1rem; }
+      display: inline-block;
+      padding: 3vh; }
       header nav a:hover {
-        color: #9ecba8;
+        background-color: #ffe9ec;
+        color: #000000;
         -webkit-transition: all 2s ease 0s;
-        transition: all 2s ease 0s; }
+        transition: all 2s ease 0s;
+        text-decoration: none; }
 
 section {
   background-color: #FFF3E5;
@@ -51,24 +56,31 @@ aside {
 
 footer {
   background-color: #C68175;
-  font-family: "Bree Serif", serif;
-  padding: 1rem; }
+  font-family: "Josefin Sans", sans-serif; }
   footer h6 {
-    margin: 0; }
+    margin: 0;
+    padding-left: 1vh; }
   footer .fab {
-    padding-left: 2rem;
-    padding-right: 2rem; }
+    padding-left: 2vh;
+    padding-right: 2vh;
+    text-align: center; }
+  footer form {
+    text-align: center; }
   footer nav {
+    text-align: left;
     list-style: none; }
     footer nav a {
       color: #F2F2F2;
+      text-align: center;
       text-decoration: none;
-      padding-left: 1.5rem;
-      padding-right: 1rem; }
+      display: inline-block;
+      padding: 3vh; }
       footer nav a:hover {
-        color: #9ecba8;
+        background-color: #ffe9ec;
+        color: #000000;
         -webkit-transition: all 2s ease 0s;
-        transition: all 2s ease 0s; }
+        transition: all 2s ease 0s;
+        text-decoration: none; }
 
 /*  SECTIONS  */
 .section {
@@ -132,6 +144,8 @@ html {
 article h2 {
   text-align: center;
   font-size: 3vh; }
+article h3 {
+  padding-left: 1rem; }
 article h4 {
   padding-left: 1rem; }
 article p {
@@ -145,4 +159,9 @@ article .research {
   width: 60%;
   margin: auto;
   padding-left: 5vh; }
+article .google {
+  padding-left: 5vh;
+  width: 100%;
+  height: 100%; }
+
 /*# sourceMappingURL=research.css.map */
