--- a/styles/research.scss
+++ b/styles/research.scss
@@ -14,5 +14,10 @@ article{
     margin: auto;
     padding-left: 5vh;
   }
+  .google{
+    padding-left: 5vh;
+    width: 100%; 
+    height: 100%;
+  }
   
 }
