--- a/styles/components/_aside.scss
+++ b/styles/components/_aside.scss
@@ -7,6 +7,11 @@ aside{
     margin:2rem;
   }
   
+  img {
+    max-width: 100%;
+    height: auto;
+}
+  
    div[class^="col span_1_of_6"]{
     border-style: solid;
     border-color:$university;
@@ -15,6 +20,7 @@ aside{
     border-radius: 1rem;
     background-color: $university;
     margin-right: 0;
+     margin-top: 1rem;
     }
   
 }
