--- a/styles/components/_header.scss
+++ b/styles/components/_header.scss
@@ -3,35 +3,59 @@ header{
   font-family: $font2;
   //padding: 1rem;
   
+  .display{
+    text-align: center;
+  
   .fab{
-    padding-left: 2vh;
-    padding-right: 2vh;
-    text-align: center;
+   padding-left: 2vh;
+   padding-right: 2vh;
+    }
+  }
+  
+  @media screen and (max-width: 960px) {
+  .topnav a:not(:first-child) {display: none;}
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
+}
+  
+  @media screen and (max-width: 960px) {
+  .topnav.responsive {position: relative;}
+  .topnav.responsive a.icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
     
-  }
-  
-  form{
-    text-align: center;
-  }
-  
-  nav {
+  .topnav.responsive a {
+    float: none;
+    display: block;
     text-align: left;
-    list-style: none;
+  }
+}
   
-  a{
-    color: $fontcolor1;
+  .topnav .icon {
+    display: none;
+}
+  
+  
+  nav a {
+    float: left;
+    display: block;
+    color: #f2f2f2;
     text-align: center;
+    padding: 14px 16px;
     text-decoration: none;
-    display: inline-block;
-    padding: 3vh;
+    font-size: 17px;
     
   
   &:hover {
     background-color: $highlight;
     color:$hover;
-    transition: all 2s ease 0s;
+    transition: all 1s ease 0s;
     text-decoration:none;
+    border-radius: 1rem;
       }
     }
-  }
 }
