--- a/styles/index.css
+++ b/styles/index.css
@@ -1,27 +1,45 @@
 header {
   background-color: #C68175;
   font-family: "Josefin Sans", sans-serif; }
-  header .fab {
-    padding-left: 2vh;
-    padding-right: 2vh;
+  header .display {
     text-align: center; }
-  header form {
-    text-align: center; }
-  header nav {
-    text-align: left;
-    list-style: none; }
-    header nav a {
-      color: #F2F2F2;
-      text-align: center;
+    header .display .fab {
+      padding-left: 2vh;
+      padding-right: 2vh; }
+  @media screen and (max-width: 960px) {
+    header .topnav a:not(:first-child) {
+      display: none; }
+    header .topnav a.icon {
+      float: right;
+      display: block; } }
+  @media screen and (max-width: 960px) {
+    header .topnav.responsive {
+      position: relative; }
+    header .topnav.responsive a.icon {
+      position: absolute;
+      right: 0;
+      top: 0; }
+    header .topnav.responsive a {
+      float: none;
+      display: block;
+      text-align: left; } }
+  header .topnav .icon {
+    display: none; }
+  header nav a {
+    float: left;
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px; }
+    header nav a:hover {
+      background-color: #ffe9ec;
+      color: #000000;
+      -webkit-transition: all 1s ease 0s;
+      transition: all 1s ease 0s;
       text-decoration: none;
-      display: inline-block;
-      padding: 3vh; }
-      header nav a:hover {
-        background-color: #ffe9ec;
-        color: #000000;
-        -webkit-transition: all 2s ease 0s;
-        transition: all 2s ease 0s;
-        text-decoration: none; }
+      border-radius: 1rem; }
 
 section {
   background-color: #FFF3E5;
@@ -45,6 +63,9 @@ aside {
   aside form {
     font-size: 3vh;
     margin: 2rem; }
+  aside img {
+    max-width: 100%;
+    height: auto; }
   aside div[class^="col span_1_of_6"] {
     border-style: solid;
     border-color: #F0F0EF;
@@ -52,7 +73,8 @@ aside {
     text-align: center;
     border-radius: 1rem;
     background-color: #F0F0EF;
-    margin-right: 0; }
+    margin-right: 0;
+    margin-top: 1rem; }
 
 footer {
   background-color: #C68175;
