--- a/styles/research.scss
+++ b/styles/research.scss
@@ -16,8 +16,10 @@ article{
   }
   .google{
     padding-left: 5vh;
-    width: 100%; 
+    padding-left: 5vh;
+    width: 90%; 
     height: 100%;
+    min-height: 40vh;
   }
   
 }
