--- a/styles/research.css
+++ b/styles/research.css
@@ -1,50 +1,191 @@
-/*
-Error: Invalid CSS after "...in-height: 40vh": expected "{", was ";"
-        on line 23 of /Users/winniewong/Desktop/html300_code/fesc_site_redesign/styles/research.scss
+header {
+  background-color: #C68175;
+  font-family: "Josefin Sans", sans-serif; }
+  header .display {
+    text-align: center; }
+    header .display .fab {
+      padding-left: 2vh;
+      padding-right: 2vh; }
+  @media screen and (max-width: 960px) {
+    header .topnav a:not(:first-child) {
+      display: none; }
+    header .topnav a.icon {
+      float: right;
+      display: block; } }
+  @media screen and (max-width: 960px) {
+    header .topnav.responsive {
+      position: relative; }
+    header .topnav.responsive a.icon {
+      position: absolute;
+      right: 0;
+      top: 0; }
+    header .topnav.responsive a {
+      float: none;
+      display: block;
+      text-align: left; } }
+  header .topnav .icon {
+    display: none; }
+  header nav a {
+    float: left;
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px; }
+    header nav a:hover {
+      background-color: #ffe9ec;
+      color: #000000;
+      -webkit-transition: all 1s ease 0s;
+      transition: all 1s ease 0s;
+      text-decoration: none;
+      border-radius: 1rem; }
 
-18:     padding-left: 5vh;
-19:     padding-left: 5vh;
-20:     width: 90%; 
-21:     height: 100%;
-22: <<<<<<< HEAD
-23:     min-height: 40vh;
-24:   }
-25:   
-26: =======
-27:   } 
-28: >>>>>>> gh-pages
+section {
+  background-color: #FFF3E5;
+  font-family: "Bree Serif", serif; }
+  section img {
+    width: 80%;
+    height: auto;
+    padding-left: 2rem; }
+  section h1 {
+    text-align: right;
+    padding-right: 2rem; }
+  section h3 {
+    margin: 0;
+    text-align: right;
+    padding-right: 3rem;
+    font-size: 3vh; }
 
-Backtrace:
-/Users/winniewong/Desktop/html300_code/fesc_site_redesign/styles/research.scss:23
-/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.5.2/lib/sass/scss/parser.rb:1278:in `expected'
-/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.5.2/lib/sass/scss/parser.rb:1208:in `expected'
-/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.5.2/lib/sass/scss/parser.rb:1203:in `tok!'
-/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.5.2/lib/sass/scss/parser.rb:677:in `block'
-/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.5.2/lib/sass/scss/parser.rb:747:in `declaration_or_ruleset'
-/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.5.2/lib/sass/scss/parser.rb:697:in `block_child'
-/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.5.2/lib/sass/scss/parser.rb:689:in `block_contents'
-/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.5.2/lib/sass/scss/parser.rb:678:in `block'
-/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.5.2/lib/sass/scss/parser.rb:747:in `declaration_or_ruleset'
-/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.5.2/lib/sass/scss/parser.rb:697:in `block_child'
-/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.5.2/lib/sass/scss/parser.rb:689:in `block_contents'
-/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.5.2/lib/sass/scss/parser.rb:678:in `block'
-/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.5.2/lib/sass/scss/parser.rb:670:in `ruleset'
-/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.5.2/lib/sass/scss/parser.rb:696:in `block_child'
-/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.5.2/lib/sass/scss/parser.rb:689:in `block_contents'
-/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.5.2/lib/sass/scss/parser.rb:137:in `stylesheet'
-/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.5.2/lib/sass/scss/parser.rb:41:in `parse'
-/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.5.2/lib/sass/engine.rb:414:in `_to_tree'
-/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.5.2/lib/sass/engine.rb:389:in `_render_with_sourcemap'
-/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.5.2/lib/sass/engine.rb:307:in `render_with_sourcemap'
-/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.5.2/lib/sass/exec/sass_scss.rb:391:in `run'
-/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.5.2/lib/sass/exec/sass_scss.rb:63:in `process_result'
-/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.5.2/lib/sass/exec/base.rb:52:in `parse'
-/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.5.2/lib/sass/exec/base.rb:19:in `parse!'
-/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.5.2/bin/sass:13:in `<top (required)>'
-/Applications/Koala.app/Contents/Resources/app.nw/bin/sass:22:in `load'
-/Applications/Koala.app/Contents/Resources/app.nw/bin/sass:22:in `<main>'
-*/
-body:before {
-  white-space: pre;
-  font-family: monospace;
-  content: "Error: Invalid CSS after \"...in-height: 40vh\": expected \"{\", was \";\"\A         on line 23 of /Users/winniewong/Desktop/html300_code/fesc_site_redesign/styles/research.scss\A \A 18:     padding-left: 5vh;\A 19:     padding-left: 5vh;\A 20:     width: 90%; \A 21:     height: 100%;\A 22: <<<<<<< HEAD\A 23:     min-height: 40vh;\A 24:   }\A 25:   \A 26: =======\A 27:   } \A 28: >>>>>>> gh-pages"; }
+aside {
+  background-color: #FFF3E5;
+  font-family: "Josefin Sans", sans-serif; }
+  aside form {
+    font-size: 3vh;
+    margin: 2rem; }
+  aside img {
+    max-width: 100%;
+    height: auto; }
+  aside div[class^="col span_1_of_6"] {
+    border-style: solid;
+    border-color: #F0F0EF;
+    border-width: 0.1vh;
+    text-align: center;
+    border-radius: 1rem;
+    background-color: #F0F0EF;
+    margin-right: 0;
+    margin-top: 1rem; }
+
+footer {
+  background-color: #C68175;
+  font-family: "Josefin Sans", sans-serif; }
+  footer h6 {
+    margin: 0;
+    padding-left: 1vh; }
+  footer .fab {
+    padding-left: 2vh;
+    padding-right: 2vh;
+    text-align: center; }
+  footer form {
+    text-align: center; }
+  footer nav {
+    text-align: left;
+    list-style: none; }
+    footer nav a {
+      color: #F2F2F2;
+      text-align: center;
+      text-decoration: none;
+      display: inline-block;
+      padding: 3vh; }
+      footer nav a:hover {
+        background-color: #ffe9ec;
+        color: #000000;
+        -webkit-transition: all 2s ease 0s;
+        transition: all 2s ease 0s;
+        text-decoration: none; }
+
+/*  SECTIONS  */
+.section {
+  clear: both;
+  padding: 0px;
+  margin: 0px; }
+
+/*  COLUMN SETUP  */
+.col {
+  display: block;
+  float: left;
+  margin: 1% 0 1% 1.6%; }
+
+.col:first-child {
+  margin-left: 0; }
+
+/*  GROUPING  */
+.group:before,
+.group:after {
+  content: "";
+  display: table; }
+
+.group:after {
+  clear: both; }
+
+.group {
+  zoom: 1;
+  /* For IE 6/7 */ }
+
+/*  GRID OF THREE  */
+.span_1_of_3 {
+  width: 32.2%; }
+
+/*  GO FULL WIDTH AT LESS THAN 480 PIXELS */
+@media only screen and (max-width: 480px) {
+  .col {
+    margin: 1% 0 1% 0%; }
+
+  .span_1_of_3 {
+    width: 100%; } }
+/*  GRID OF TWO */
+.span_1_of_2 {
+  width: 49.2%; }
+
+/*  GO FULL WIDTH AT LESS THAN 480 PIXELS */
+@media only screen and (max-width: 480px) {
+  .span_1_of_2 {
+    width: 100%; } }
+/*  GRID OF SIX  */
+.span_1_of_6 {
+  width: 14%; }
+
+/*  GO FULL WIDTH AT LESS THAN 480 PIXELS */
+@media only screen and (max-width: 480px) {
+  .span_1_of_6 {
+    width: 100%; } }
+html {
+  font-family: "Roboto Slab", serif;
+  background-color: #f7f7f7; }
+
+article h2 {
+  text-align: center;
+  font-size: 3vh; }
+article h3 {
+  padding-left: 1rem; }
+article h4 {
+  padding-left: 1rem; }
+article p {
+  margin-left: 2rem;
+  margin-right: 2rem; }
+
+@media only screen and (min-width: 320px) and (max-width: 768px) {
+  html {
+    width: 100%; } }
+article .research {
+  width: 60%;
+  margin: auto;
+  padding-left: 5vh; }
+article .google {
+  padding-left: 5vh;
+  padding-left: 5vh;
+  width: 90%;
+  height: 100%;
+  min-height: 40vh; }
+
+/*# sourceMappingURL=research.css.map */
