--- a/styles/research.css
+++ b/styles/research.css
@@ -62,19 +62,20 @@ aside {
   font-family: "Josefin Sans", sans-serif; }
   aside form {
     font-size: 3vh;
-    margin: 2rem; }
+    margin: 2rem;
+    max-width: 90%; }
   aside img {
     max-width: 100%;
     height: auto; }
-  aside div[class^="col span_1_of_6"] {
+  aside div[class^="col-lg-2 col-md-3 col-sm-4 col-xs-12"] {
     border-style: solid;
     border-color: #F0F0EF;
-    border-width: 0.1vh;
+    border-width: 0.5vh;
     text-align: center;
     border-radius: 1rem;
     background-color: #F0F0EF;
-    margin-right: 0;
-    margin-top: 1rem; }
+    margin-top: 1rem;
+    padding: 0.5vh; }
 
 footer {
   background-color: #C68175;
@@ -147,9 +148,15 @@ footer {
 .span_1_of_2 {
   width: 49.2%; }
 
+.span_2_of_2 {
+  width: 49.2%; }
+
 /*  GO FULL WIDTH AT LESS THAN 480 PIXELS */
 @media only screen and (max-width: 480px) {
   .span_1_of_2 {
+    width: 100%; }
+
+  .span_2_of_2 {
     width: 100%; } }
 /*  GRID OF SIX  */
 .span_1_of_6 {
