--- a/styles/components/_footer.scss
+++ b/styles/components/_footer.scss
@@ -34,8 +34,8 @@ footer{
   &:hover {
     background-color: $highlight;
     color:$hover;
-    transition: all 2s ease 0s;
     text-decoration:none;
+    border-radius: 1rem;
       }
     }
   }
