--- a/styles/contact.scss
+++ b/styles/contact.scss
@@ -11,26 +11,31 @@ article{
   
   .map{
     width:80%;
-    padding-left: 5vh;
-  }
-  .person{
-    width:60%;
-    padding-left: 10%;
   }
   
+  
+  img{
+    width:90%;
+    border-style: solid;
+    border-radius: 2rem;
+    padding: 2vh;
+    background-color: $border;
+    margin: 2vh;
+  }
   form{
     text-align: center;
   }
   
   textarea{
-    max-width: 70%;
+    max-width: 100%;
   }
   
   fieldset{
     width:40%;
     margin:auto;
  }
-  .center{
-    padding-left: 5%;
+  
+  h4{
+    text-align: center;
   }
 }
