--- a/styles/index.css
+++ b/styles/index.css
@@ -101,9 +101,8 @@ footer {
       footer nav a:hover {
         background-color: #ffe9ec;
         color: #000000;
-        -webkit-transition: all 2s ease 0s;
-        transition: all 2s ease 0s;
-        text-decoration: none; }
+        text-decoration: none;
+        border-radius: 1rem; }
 
 /*  SECTIONS  */
 .section {
@@ -189,4 +188,5 @@ article .youtube {
 article img {
   padding-left: 1.5vh;
   max-width: 100%; }
+
 /*# sourceMappingURL=index.css.map */
