--- a/styles/research.scss
+++ b/styles/research.scss
@@ -19,6 +19,7 @@ article{
     padding-left: 5vh;
     width: 80%; 
     height: 100%;
-    min-height: 40vh;
+    min-height: 60vh;
+    min-width: 60vh;
   }
 }
